Fixup rebuild